fixing functionality of dropdown menu on mobile and positioning of dropdown on desktop

--- a/themes/compro_theme/css/style.css
+++ b/themes/compro_theme/css/style.css
@@ -383,9 +383,9 @@ header {
       header .region-nav {
         background-color: rgba(250, 250, 250, 0.85);
         display: none;
-        height: 350px;
+        height: 400px;
         position: absolute;
-        top: 84px;
+        top: 85px;
         -webkit-transition: 250ms cubic-bezier(0.18, 0.01, 0.63, 0.98);
         -o-transition: 250ms cubic-bezier(0.18, 0.01, 0.63, 0.98);
         transition: 250ms cubic-bezier(0.18, 0.01, 0.63, 0.98);
@@ -395,7 +395,9 @@ header {
   header.header-fixed {
     background-color: rgba(250, 250, 250, 0.85);
     height: 85px;
+    padding-top: 0px;
     position: fixed;
+    top: 0;
     right: 0;
     left: 0; }
     @media screen and (max-width: 940px) {
@@ -405,6 +407,9 @@ header {
       padding: 20px 40px;
       width: 100%;
       z-index: 500; }
+      @media all and (max-width: 480px) {
+        header.header-fixed .container {
+          padding: 20px; } }
     header.header-fixed .region-header {
       background-color: transparent; }
     header.header-fixed .region-nav {
@@ -748,7 +753,7 @@ header {
       display: inline-block; } }
 @media all and (max-width: 1230px) {
   .region-header {
-    max-width: 48%; } }
+    max-width: 43%; } }
 @media all and (max-width: 940px) {
   .region-header {
     max-width: 100%; } }
@@ -767,11 +772,10 @@ header {
         text-align: center;
         top: 240px;
         width: 100%;
-        z-index: 10; } }
+        z-index: 2; } }
   .region-nav .menu--menu-main-menu {
     display: inline-block;
-    float: right;
-    z-index: 1000; }
+    float: right; }
   .region-nav .block-search-icon-block {
     display: inline-block;
     float: right;
@@ -1001,6 +1005,14 @@ footer.footer-wrapper {
         opacity: 0;
         background-color: transparent;
         max-height: 0; } }
+  @media all and (max-width: 940px) {
+    .menu--menu-main-menu.block-menu li.menu-item--expanded > .menu {
+      opacity: 0;
+      background-color: transparent;
+      max-height: 0; }
+      .menu--menu-main-menu.block-menu li.menu-item--expanded > .menu li a {
+        display: inline-block;
+        width: 100%; } }
   .menu--menu-main-menu.block-menu li > .menu {
     background-color: rgba(250, 250, 250, 0.85);
     max-height: 0;
@@ -1009,23 +1021,30 @@ footer.footer-wrapper {
     opacity: 0;
     padding: 15px;
     position: absolute;
-    top: 82px;
-    right: 0;
+    left: 0;
+    -webkit-transform: translateY(100%);
+        -ms-transform: translateY(100%);
+            transform: translateY(100%);
     -webkit-transition: max-height, opacity 300ms ease-in-out;
     -o-transition: max-height, opacity 300ms ease-in-out;
     transition: max-height, opacity 300ms ease-in-out; }
-  .region-nav.child-open .menu--menu-main-menu.block-menu li > .menu {
+  .menu--menu-main-menu.block-menu li.is-open.menu-item--expanded > .menu {
     background-color: transparent;
     font-size: 0.9375rem;
     max-height: none;
     opacity: 1;
-    top: unset; }
-  .region-nav.child-open .menu--menu-main-menu.block-menu li .toggle {
+    -webkit-transform: unset;
+        -ms-transform: unset;
+            transform: unset; }
+  .menu--menu-main-menu.block-menu li.is-open.menu-item--expanded + .toggle {
     -webkit-transform: rotate(45deg);
         -ms-transform: rotate(45deg);
-            transform: rotate(45deg); }
+            transform: rotate(45deg);
+    z-index: 200; }
   .header-fixed .menu--menu-main-menu.block-menu li > .menu {
-    top: 62px; }
+    -webkit-transform: translateY(79%);
+        -ms-transform: translateY(79%);
+            transform: translateY(79%); }
   .region-nav.is-open .menu--menu-main-menu.block-menu li {
     display: inline-block;
     margin: 0 0 20px 0;
