--- a/themes/compro_theme/sass/drupal/_page.scss
+++ b/themes/compro_theme/sass/drupal/_page.scss
@@ -47,13 +47,9 @@ header {
     @media all and (max-width: 940px) {
       background-color: rgba(250,250,250,0.85);
       display: none;
-      height: 350px;
+      height: 400px;
       position: absolute;
-      top: 84px;
-      -webkit-transition: 250ms cubic-bezier(.18,.01,.63,.98);
-      -moz-transition: 250ms cubic-bezier(.18,.01,.63,.98);
-      -ms-transition: 250ms cubic-bezier(.18,.01,.63,.98);
-      -o-transition: 250ms cubic-bezier(.18,.01,.63,.98);
+        top: 85px;
       transition: 250ms cubic-bezier(.18,.01,.63,.98);
       width: 100vw;
     }
@@ -64,11 +60,13 @@ header {
 
   }
 
-  //States
+  // States
   &.header-fixed {
     background-color: rgba(250, 250, 250, 0.85);
     height: 85px;
+    padding-top: 0px;
     position: fixed;
+      top: 0;
       right: 0;
       left: 0;
 
@@ -77,9 +75,14 @@ header {
     }
 
     .container  {
-      padding: 20px 40px;
+      padding: 20px 40px; // for some reason in order to resolve fixed header scrolling through padding i'm removing padding from here and applying to 'region-header'
       width: 100%;
       z-index: 500;
+
+      @media all and (max-width: 480px) {
+        padding: 20px;
+      }
+      
     }
 
     .region-header {
@@ -124,7 +127,6 @@ header {
     label {
       display: none;
     }
-
 
   }
 
